--- a/2/index.html
+++ b/2/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>mohammad aljanobi2</title>
 </head>
 <body>
     tow
 </body>
-
 <a href="3">
-    three>>
+htree
 </a>
 </html>
