--- a/3/index.html
+++ b/3/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>mohammad aljanobi3</title>
 </head>
 <body>
-    three
-
+    Three
 </body>
-<a href="4">
-    four...
+
+<a href="4">four
     
 </a>
 </html>
