--- a/index.html
+++ b/index.html
@@ -7,21 +7,31 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-150314142-1');
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mohammad aljanobi1</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    one...five
+I will always be there for you.
+You will never be alone.
+I will be that candle in the window,
+So you can always find your way back home.
+
+I will be the sun in the sky
+To brighten up your day,
+I will be the moon shining above,
+So in the dark you can find your way.
+
+
 
 </body>
 
-<a href="2">
-    tow
+<a href="tow/index.html">
+    Next
 </a>
 
 </html>
